Updated server and client JS code
Simplified server code, and added socket.io connection between client and server.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,5 +6,8 @@
   </head>
   <body>
     {{{body}}}
+    
+    <script src="/javascripts/socket.io.min.js"></script>
+    <script src="/javascripts/client.js"></script>
   </body>
 </html>
