Added graph (with Chart.js)

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
 <h1>Web Interface IoT</h1>
 
+<canvas id="chart" width="900" height="400"></canvas>
+
+<script src="/javascripts/chart.js"></script>
+<script src="/javascripts/socket.io.min.js"></script>
+<script src="/javascripts/client.js"></script>
